# RunWithAI

./: app.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
src/run_app/: app.py  main.py  plots.py  requirements.txt  strava.csv  strava.py  text.py
src/run_app/.streamlit/: config.toml
