[tool.poetry]
name = "run-app"
version = "0.1.0"
description = ""
authors = ["MariusSuessmilch <47320006+MariusSuessmilch@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "run_app", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.9.7 || >3.9.7,<4.0"
black = "^23.7.0"
ruff = "^0.0.285"
pytest = "^7.4.0"
pre-commit = "^3.3.3"
streamlit = "^1.25.0"
streamlit-lottie = "^0.0.5"
plotly = "^5.16.1"
watchdog = "^3.0.0"
openai = "^0.27.9"
requests = "^2.31.0"
langchain = "^0.0.271"
tabulate = "^0.9.0"
scikit-learn = "^1.3.0"
httpx = "^0.24.1"
stravalib = "0.10.2"
pandas = "^2.0.3"
bokeh = "2.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"#

[tool.black]
skip-string-normalization = true
line-length = 120

[tool.ruff]
# Same as Black.
line-length = 120

exclude = ["jupyter_notebook_config.py"]
select = [
    "E",  # pycodestyle errors (settings from FastAPI, thanks, @tiangolo!)
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "C901",  # too complex
]

[tool.ruff.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = []
